# odooaiorpc

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  explanation.html  how-to-guides.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  reference.html  tutorials.html
.github/workflows/: ci.yaml  docs.yaml  test.yaml
docs/: index.md
odooaiorpc/: __init__.py  __main__.py  client.py  config.py  const.py  exception.py  state.py  utils.py
odooaiorpc/cli/: __init__.py  db.py  main.py  server.py
odooaiorpc/domain/: __init__.py  base.py  common.py  db.py  models.py
odooaiorpc/protocol/: __init__.py  base.py  jsonrpc.py  xmlrpc.py
odooaiorpc/transport/: __init__.py  base.py  jsonrpc.py  xmlrpc.py
search/: search_index.json
tests/: test_version.py
