[tool.poetry]
name = "odooaiorpc"
version = "0.1.0"
description = "An async remote procedure call to Odoo ERP"
authors = ["Remy Zulauff <remy.zulauff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["dotenv"], version = "^1.10.8"}
typer = "^0.9.0"
aioxmlrpc = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5"
black = "^22"
isort = "^5"
flake8 = "^4"
bandit = "^1"
pre-commit = "^2"

[tool.isort]
profile="black"

[tool.poetry.scripts]
odooaiorpc = "odooaiorpc.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
