[tool.poetry]
name = "odooaiorpc"
version = "0.1.0-alpha1"
description = "An async remote procedure call to Odoo ERP"
authors = ["Remy Zulauff <remy.zulauff@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/remyz17/odooaiorpc"
repository = "https://github.com/remyz17/odooaiorpc"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["dotenv"], version = "^1.10.8"}
typer = "^0.9.0"
aioxmlrpc = "^0.7.0"
sniffio = "^1.3.0"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
setuptools = "^68.0.0"
bandit = "^1.7.5"
isort = "^5.12.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.17"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}

[tool.isort]
profile="black"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B602", "B607"]

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.11"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.poetry.scripts]
odooaiorpc = "odooaiorpc.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
